# transparent_objects

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  TODO  algorithm.html  config_detection.transparent_objects  config_training.transparent_objects  genindex.html  index.html  objects.inv  package.xml  readme.rst  sample.html  search.html  searchindex.js  setup.py  stack.xml  stack.yaml
_sources/: algorithm.txt  index.txt  sample.txt
cells/: CMakeLists.txt  config_detection.transparent_objects  config_training.transparent_objects  db_transparent_objects.cpp  db_transparent_objects.hpp  detect.cpp  modelFiller.cpp  module.cpp  train.cpp
conf/: camera_VGA.yml  config_detection.transparent_objects  config_training.transparent_objects  detection.ros.ork  headerTemplate.txt  rotations.txt  textureFilters.xml  training.ros.ork
demo/: camera.yml  demo.cpp
doc/source/: algorithm.rst  conf.py  index.rst
include/chamfer_matching/: chamfer_matching.h
include/edges_pose_refiner/: TODBaseImporter.hpp  detector.hpp  edgeModel.hpp  edgesPoseRefiner.hpp  enhancedGlassSegmenter.hpp  geodesicActiveContour.hpp  glassDetector.hpp  glassSegmentator.hpp  gmm.hpp  kPartiteGraph.hpp  line2D.hpp  localPoseRefiner.hpp  nonMaximumSuppression.hpp  pcl.hpp  pclProcessing.hpp  pclVisualization.hpp  pinholeCamera.hpp  poseError.hpp  poseEstimator.hpp  poseRT.hpp  region.hpp  registerPointClouds.hpp  segmentedImage.hpp  silhouette.hpp  tableSegmentation.hpp  tangentVectorsEstimator.hpp  transparentDetector.hpp  utils.hpp
include/fdcm/: fdcm.hpp
include/fdcm/fdcm/: EIEdgeImage.h  LMDetWind.h  LMDirectionalIntegralDistanceImage.h  LMDisplay.h  LMDistanceImage.h  LMLineMatcher.h  LMNonMaximumSuppression.h  MMFunctions.h  MatchingCostMap.h
include/fdcm/fitline/: LFLineFitter.h  LFLineSegment.h  Point.h
include/fdcm/image/: DistanceTransform.h  Image.h  ImageDraw.h  ImageIO.h
include/modelCapture/: modelCapturer.hpp
python/: CMakeLists.txt
python/object_recognition_transparent_objects/: detector.py  mesh_uploader.py  trainer.py
python/transparent_objects/: detector.py  mesh_uploader.py  trainer.py
sample/: sample.cpp  trainObject_1.ply  trainObject_2.ply
src/: CMakeLists.txt  TODBaseImporter.cpp  centralizeModel.cpp  detector.cpp  edgeModel.cpp  edgesPoseRefiner.cpp  enhancedGlassSegmenter.cpp  geodesicActiveContour.cpp  glassDetector.cpp  glassSegmentator.cpp  gmm.cpp  kPartiteGraph.cpp  kinfuSegmentation.cpp  localPoseRefiner.cpp  nonMaximumSuppression.cpp  pcl.cpp  pclProcessing.cpp  pclVisualization.cpp  pinholeCamera.cpp  poseError.cpp  poseEstimator.cpp  poseRT.cpp  registerPointClouds.cpp  silhouette.cpp  stereoCalib2TOD.cpp  tableSegmentation.cpp  tangentVectorsEstimator.cpp  transparentDetector.cpp  utils.cpp
src/ILP_reconstruction/: ilpProblem.cpp  ilpProblem.hpp  reconstructObject.cpp  solveIlpProblem.py
src/apps/: captureModel.cpp  createBackgroundMask.py  createMasksForDataset.py  createObjectMask.cpp  createSegmentedImagesForDataset.py  evaluateByOcclusions.py  evaluateOnDataset.py  evaluateOversegmentation.py  kinfuSegmentation.cpp  labelDataset.cpp  labelSegmentation.cpp  line2dLogAnalyzer.py  parseQualities.py  pickAndPlace.cpp  poseEstimationDemo.cpp  reconstructRotationalModel.cpp  reconstructRotationalModel_singleImage.cpp  runDetectionOnDataset.cpp  runExperiments.py  showTable.cpp  utils.py  writeVideo.cpp
src/apps/bags/: dumpBagFile.cpp
src/archive/: edgesPoseRefiner.cpp
src/chamfer_matching/: chamfer_matching.cpp
src/demo/: demo.cpp
src/fdcm/: fdcm.cpp
src/fdcm/fdcm/: EIEdgeImage.cpp  LMDirectionalIntegralDistanceImage.cpp  LMDisplay.cpp  LMDistanceImage.cpp  LMLineMatcher.cpp  LMNonMaximumSuppression.cpp  MatchingCostMap.cpp  fdcm.cpp
src/fdcm/fitline/: LFLineFitter.cpp  LFLineSegment.cpp  fitline.cpp
src/fdcm/image/: DistanceTransform.cpp
src/glass_segmentation/: createSegmentation.cpp  createSegmentedImage.cpp  demo.cpp  enhancedGlassSegmenter.cpp  geodesicActiveContour.cpp  region.cpp  segmentedImage.cpp
src/line2D/: evaluation.cpp  line2D.cpp
src/modelCapture/: modelCapturer.cpp
src/mrf/: example  mrf.h
src/transparent_experiments/: TODBaseImporter.cpp  TODBaseImporter.hpp  transparentExperiments.cpp
test/: CMakeLists.txt
